# aidlfire

./: .gitignore  AGENTS.md  AIDL_PROJECT_GUIDE.md  DATA_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  README.md  hyp_tunning.csv  requirements.txt
_docs_critical_review_/: CEMS_Wildfire_Dataset_Expanded.md  CEMS_Wildfire_Dataset_Summary.md  EO4WildFires_Dataset_Expanded.md  EO4WildFires_Dataset_Summary.md  Pipeline_Data_Transformation_Expanded.md  Pipeline_Data_Transformation_Summary.md  Training_Pipeline_Expanded.md  Training_Pipeline_Summary.md
docs/: APP.md  APP_DEMO.md  APP_FEATURES.md  COMBINED_BINARY_SEVERITY_WORKFLOW.md  DATA_AND_TRAINING_PIPELINE.md  DATA_PIPELINE.md  DEFENSE_SOLUTION_REPORT.md  PROJECT_REPORT.md  RESNET50_UNETPP_ARCHITECTURE.md  RUN_INSTRUCTIONS.md  TRAINING_PIPELINE.md  UNET_SCRATCH_ARCHITECTURE.md  V3_PIPELINE_ARCHITECTURES.md  WANDB_ANALYSIS_REPORT.md
fire-pipeline/: CHANGES.md  CLAUDE.md  HYPERPARAMETER_TUNING_GUIDE.md  PATCHES.md  QUICK_REFERENCE.md  README.md  TENSORBOARD_AND_METRICS.md  TRAIN_ALL_MODELS_SUMMARY.md  analyze_metrics.py  analyze_patches.py  analyze_wandb_report.py  app.py  check_training_status.sh  cloud_detection.py  constants.py  dataset.py  download_dataset.py  export_wandb_runs.py  inference.py  inference_scratch.py  inference_unet_scratch.py  inference_yolo.py  main.py  metric_logger.py  metrics.py  model.py  patch_generator.py  pyproject.toml  remove_catalan_data.py  run_pipeline.py  satellite_fetcher.py  scratch_model.py  sen2fire_dataset.py  storage.py  train.py  train_all_models.py  train_combined_binary.py  train_severity_finetune.py  training_results.csv  unet_scratch.py  (+7 more)
fire-pipeline/tests/: __init__.py  conftest.py  test_inference.py  test_integration.py  test_metrics.py  test_satellite_fetcher.py  test_storage.py
specs/: optional-basline-models-comparison.md  optional_api_design.md  risks_and_mitigations.md  wildfire_detection_spec.md
(+8 files in other folders)
